🌱 fixed flags not showing

--- a/src/components/Flag/flag.scss
+++ b/src/components/Flag/flag.scss
@@ -1,8 +1,8 @@
 .flag-container {
     display: inline-block;
     overflow: hidden;
-    height: 90px;
-    width: 90px;
+    height: 70px;
+    width: 70px;
     -o-object-fit: cover;
     object-fit: cover;
     border-radius: 50%;
